# fp2023

DAliev/: DAliev.opam  README.md  dune-project
DAliev/_build/: .db  .digest-db  log
DAliev/_build/.promotion-staging/lib/: tests.ml
DAliev/_build/default/: DAliev.dune-package  DAliev.install  META.DAliev
DAliev/_build/default/.dune/: configurator  configurator.v2
DAliev/_build/default/.ppx/960fdef1c3c55fa96c02cffb8a806b5a/: dune__exe___ppx.cmo  dune__exe___ppx.cmx
DAliev/_build/default/.ppx/da37342bd70019751e41a263d5041ce7/: dune__exe___ppx.cmo
DAliev/_build/default/demos/.demoInterpret.eobjs/byte/: dune__exe__DemoInterpret.cmi  dune__exe__DemoInterpret.cmti
DAliev/_build/default/demos/.merlin-conf/: exe-demoInterpret  exe-demoParse
DAliev/_build/default/lib/: DAliev_lib.cma  DAliev_lib.cmxa  DAliev_lib.cmxs  ast.ml  ast.pp.ml  dAliev_lib.ml-gen  infer.ml  infer.pp.ml  interpret.ml  interpret.pp.ml  parser.ml  parser.pp.ml  tests.cma  tests.cmxa  tests.cmxs  tests.ml  tests.pp.ml  typing.ml  typing.pp.ml
DAliev/_build/default/lib/.DAliev_lib.objs/: dAliev_lib__Ast.impl.d  dAliev_lib__Infer.impl.d  dAliev_lib__Interpret.impl.all-deps  dAliev_lib__Interpret.impl.d  dAliev_lib__Parser.impl.all-deps  dAliev_lib__Parser.impl.d  dAliev_lib__Typing.impl.d
DAliev/_build/default/lib/.merlin-conf/: lib-DAliev.Lib  lib-tests
DAliev/demos/: demoInterpret.ml  demoInterpret.t  demoParse.ml  demoParse.t  dune
DAliev/lib/: ast.ml  ast.mli  dune  infer.ml  infer.mli  interpret.ml  interpret.mli  parser.ml  parser.mli  tests.ml  tests.mli  typing.ml  typing.mli
(+60 files in other folders)
