(executable
 (name demoParse)
 (modules demoParse)
 (public_name demoParse)
 (libraries DAliev.Lib stdio)
 (instrumentation
  (backend bisect_ppx)))

(executable
 (name demoInterpret)
 (modules demoInterpret)
 (public_name demoInterpret)
 (libraries DAliev.Lib stdio)
 (instrumentation
  (backend bisect_ppx)))

(cram
 (applies_to demoParse)
 (deps ./demoParse.exe))

(cram
 (applies_to demoInterpret)
 (deps ./demoInterpret.exe))
